@@ -28,7 +28,7 @@ LIBWNCK_REQUIRED=2.5.0
 LIBGTOP_REQUIRED=2.13.0
 GTK_REQUIRED=2.8.0
 GNOME_VFS_REQUIRED=2.6.0
-# LIBGKSUUI_REQUIRED=0.15.0
+LIBGKSUUI_REQUIRED=1.0.0
 LIBGKSU_REQUIRED=0.15.0
 
 PKG_CHECK_MODULES(PROCMAN, glib-2.0 >= $GLIB_REQUIRED libgnome-2.0 >= $LIBGNOME_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED gconf-2.0 >= $GCONF_REQUIRED libgtop-2.0 >= $LIBGTOP_REQUIRED libwnck-1.0 >= $LIBWNCK_REQUIRED gtk+-2.0 >= $GTK_REQUIRED gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED)
@@ -107,11 +107,12 @@ AC_SUBST(SELINUX_LIBS)
 AC_ARG_ENABLE(libgksu, AC_HELP_STRING(--enable-libgksu, enable libgksu support), \
 		       enable_libgksu=$enableval, enable_libgksu=auto)
 
-# SELinux detection
+# gksu detection
 if test x$enable_libgksu = xno ; then
     have_libgksu=no;
 else
-    PKG_CHECK_MODULES(LIBGKSU, libgksu1.2 >= $LIBGKSU_REQUIRED, have_libgksu=yes, have_libgksu=no)
+    PKG_CHECK_MODULES(LIBGKSU, libgksu1.2 >= $LIBGKSU_REQUIRED libgksuui1.0 >= $LIBGKSUUI_REQUIRED,
+			have_libgksu=yes, have_libgksu=no)
 fi
 
 AM_CONDITIONAL(ENABLE_LIBGKSU, test x$have_libgksu = xyes, [Define to enable libgksu support])
@@ -121,10 +122,14 @@ if test x$have_libgksu = xyes ; then
 else
     LIBGKSU_CFLAGS=
     LIBGKSU_LIBS=
+    LIBGKSUUI_CFLAGS=
+    LIBGKSUUI_LIBS=
 fi
 
 AC_SUBST(LIBGKSU_CFLAGS)
 AC_SUBST(LIBGKSU_LIBS)
+AC_SUBST(LIBGKSUUI_CFLAGS)
+AC_SUBST(LIBGKSUUI_LIBS)
 
 
 AC_CONFIG_FILES([
