@@ -1,3 +1,12 @@
+2006-04-10  Benoît Dejean  <benoit@placenet.org>
+
+	* configure.in:
+	* src/Makefile.am:
+	* src/procdialogs.c: (procdialog_create_root_password_dialog):
+	* src/procman_gksu.c: (procman_gksu_create_root_password_dialog):
+
+	Updated gksu backend.
+
 2006-04-09  Benoît Dejean  <benoit@placenet.org>
 
 	* src/load-graph.c: (load_graph_new):
